# learncpp

./: .gitignore  CMakeLists.txt  main.cpp
String/: CMakeLists.txt  MyString.cpp  MyString.h  fb_string.cpp  test.cpp
abseil_tips_demo/: CMakeLists.txt  main.cpp
arrow/: CMakeLists.txt  arrow_demo.cpp  arrow_fixed_schema_demo.cpp  plasma_demo.cpp
ch10/: CMakeLists.txt  test.cpp
ch13/: CMakeLists.txt  Foo.cpp  Foo.h  StrVec.cpp  StrVec.h  test.cpp
ch15/: CMakeLists.txt  test.cpp
ch16/: CMakeLists.txt  copy_ellision.cpp  test.cpp
ch9/: CMakeLists.txt  test.cpp
compression_demo/: CMakeLists.txt  main.cpp
concurrency/: CMakeLists.txt  ThreadSafeQueue.h  ThreadSafeQueue.tpp  ThreadSafeStack.cpp  ThreadSafeStack.h  atomic.cpp  concurrent_hashmap.cpp  concurrent_hashmap.h  concurrent_hashmap_tests.cpp  cv.cpp  folly_demo.cpp  lock_free_stack.h  lock_guard.cpp  mutex.cpp  openmp_demo.cpp  parallel_quick_sort.h  promise.cpp  thread.cpp  thread_pool.cpp  thread_safe_queue_with_lock.h
concurrent_queue/: test.cpp
database_indexing/: CMakeLists.txt  art_demo.cpp  atomic_demo.cpp  fst_demo.cpp  thmap_demo.cpp
database_indexing/thmap/: murmurhash.c  portable_endian.h  t_stress.cpp  t_thmap.cpp  thmap.c
duckdb/: CMakeLists.txt  main.cpp
faiss_demo/: CMakeLists.txt  client.cpp  common.grpc.pb.h  common.pb.h  faiss_hnsw_demo.cpp  hnswlib_demo.cpp  load_sift_base.py  main.cpp
faiss_demo/proto/: common.proto
folly/: CMakeLists.txt  executor_demo.cpp  main.cpp
hashmap_demo/: CMakeLists.txt  flat_hash_map.hpp  main.cpp
hdfs/: CMakeLists.txt  hdfs_demo.cpp
kdtreedemo/: CMakeLists.txt  main.cpp
kv_engine/: CMakeLists.txt  rocksdb_demo.cpp
leveldb/: CMakeLists.txt  column_families.cpp  comparator.cpp  inlineskiplist_debug.cpp  ldb_parser.cpp  rocks_example.cpp  rocks_merge_operator.cpp  rocks_opt_transaction.cpp  rocks_transaction.cpp  test_level.cpp
modern/: CMakeLists.txt  coroutine.cpp  data_structure.cpp  defer.h  enum_demo.cpp  exception.cpp  json_demo.cpp  reference_wrapper_demo.cpp  test.cpp  variants_demo.cpp
module/: CMakeLists.txt  Hello.cppm  use.cpp
object_model/: CMakeLists.txt  test.cpp
openssldemo/: CMakeLists.txt  main.cpp
simd/: CMakeLists.txt  demo.cpp  main.cpp  parse_float.cpp
smart_pointers/: CMakeLists.txt  StrBlob.cpp  StrBlob.h  StrBlobPtr.cpp  StrBlobPtr.h  main.cpp  managed_pointer.h
system/: CMakeLists.txt  backtrace_demo.cpp  jump.cpp  mmap_example.cpp  pointer_swizzle_demo.cpp
titan_db/: CMakeLists.txt  titandb_test.cpp
usb/: CMakeLists.txt  usb_example.cpp
uv_wrapper/: CMakeLists.txt  TcpConnection.h  TcpServer.h  Timer.h  test.cpp
zookeeper/: CMakeLists.txt  main.cpp
